add button hover example

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>Frontend Debugging Exercises</title>
     <link rel="stylesheet" href="../style.css"/>
   </head>
-  <body>
+  <body class="page-{{ page.url | remove: '/' }}">
     <ul class="navbar">
       <li>
         <img class="logo" src="../assets/logo.png"/>
