--- a/style.css
+++ b/style.css
@@ -15,3 +15,19 @@
 .content {
   padding: 50px;
 }
+
+
+/* example-specific styles */
+
+.page-2_button button {
+  background-color: white;
+  border-radius: 15px;
+  border: 2px solid blue;
+  color: blue;
+  font-size: 1.1em;
+  padding: 10px 19px;
+}
+
+.page-2_button button:hover {
+  background-color: blue;
+}
