--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Frontend Debugging Exercises</title>
+    <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/assets/logo.png" />
     <link rel="stylesheet" href="{{site.baseurl}}/style.css"/>
   </head>
   <body class="page-{{ page.url | remove: '/' }}">
